# windsurf-relay

./: .gitignore
.github/workflows/: release.yml
cli/: package.json
cli/scripts/: install.js
crates/mcp-client/: Cargo.toml
crates/mcp-client/src/: executor.rs  main.rs  prompt.rs  protocol.rs  windsurf.rs
